<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg7"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#6F556C"
        android:text="@string/move_activity"
        android:textColor="#F5C78E"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#6F556C"
        android:text="@string/move_activity_data"
        android:textColor="#F5C78E"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_with_data_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#6F556C"
        android:text="@string/move_with_data_activity"
        android:textColor="#F5C78E"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_with_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#6F556C"
        android:text="@string/move_with_activity"
        android:textColor="#F5C78E"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#6F556C"
        android:text="@string/move_with_data"
        android:textColor="#F5C78E"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin5"
        android:background="#979195"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin1"
        android:paddingBottom="@dimen/activity_vertical_margin2"
        android:text="@string/pesan"
        android:textColor="#3D3B3B"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6A3A5"
        android:paddingBottom="@dimen/activity_vertical_margin3"
        android:text="@string/hanya"
        android:textAlignment="center" />


</LinearLayout>